# Cpp_AutoRelease

./: .clang-format  CMakeLists.txt  README.md
autorelease/: CMakeLists.txt
autorelease/include/autorelease/: AutoRelease.hpp
cmake/: autoreleaseConfig.cmake.in
examples/: CMakeLists.txt
examples/SDL2/: CMakeLists.txt  main.cpp
examples/raylib/: CMakeLists.txt  main.cpp
